# money-printer

./: .gitignore  Dockerfile  README.md  channel.yaml  config.example.toml  pyproject.toml  requirements.txt  webui.sh
.claude/commands/: create-channel.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
app/: asgi.py  router.py
app/config/: __init__.py
app/controllers/manager/: redis_manager.py
app/controllers/v1/: channel.py  video.py
app/models/: schema.py
app/services/: channel.py  idea.py  llm.py  task.py  video.py  video_entity.py  voice.py
app/services/utils/: video_effects.py
docs/: Backend.md  Frontend.md  GPU_DOCKER_DEPLOYMENT.md  PR_MERGE_RECORD_2026-04-02.md
resource/public/: index.html
webui/: Main.py
